Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-Hola Amigos
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Mahathir Almashor by ma-al</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/main.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
+  </head>
+  <body>
+
+      <header>
+        <h1>Mahathir Almashor</h1>
+        <p>Life is short. Have fun working. ¯\_(ツ)_/¯</p>
+      </header>
+
+      <div id="banner">
+        <span id="logo"></span>
+
+        <a href="https://github.com/ma-al" class="button fork"><strong>View On GitHub</strong></a>
+      </div><!-- end banner -->
+
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
+      <section>
+        <h3>
+<a id="details" class="anchor" href="#details" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Details</h3>
+
+<p>Research | Software Engineer<br>
+IBM Research Australia</p>
+
+<p><g-emoji alias="office" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f3e2.png">🏢</g-emoji> <a href="http://researcher.watson.ibm.com/researcher/view.php?person=au1-malmash">Work</a> |
+<g-emoji alias="floppy_disk" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4be.png">💾</g-emoji> <a href="https://github.com/ma-al">Code</a> |
+<g-emoji alias="mortar_board" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f393.png">🎓</g-emoji> <a href="http://orcid.org/0000-0002-3846-6282">Research</a></p>
+
+<h3>
+<a id="recent" class="anchor" href="#recent" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Recent</h3>
+
+<ul>
+<li><p><strong>June 2016</strong> -  Participated in <a href="http://www.rhokaustralia.org/#what-is">Random Hacks of Kindness (RHoK)</a>, a hackathon for good causes. Helped <a href="http://changingplaces.org.au">Changing Places</a> develop a feedback tool for severely disabled people. Tweets of event:  <a href="https://twitter.com/rhokmelb/status/739343952512356352">@rhokmelb</a> and <a href="https://twitter.com/acd_eddie/status/739345009435017217">@acd_eddie</a>.</p></li>
+<li><p><strong>May 2016</strong> - Presented at <a href="http://anzdmc.com.au">ANZDMC 2016</a>, a conference for Disaster and Emergency Management. Talk was entitled "Mapping Wildfire Community Impact" and was about optimal sensor placement to detect wildfires. See <a href="https://twitter.com/DisasterForums/status/737156162810847232">tweet of event</a>.</p></li>
+<li><p><strong>Jan 2016</strong> - Journal article published in <a href="http://dx.doi.org/10.1016/j.simpat.2015.10.002">Simulation Modelling Practice and Theory (SimPAT)</a> entitled "Simulation of Wildfire Evacuation with Dynamic Factors and Model Composition". Based on work done for <a href="http://researcher.watson.ibm.com/researcher/view_group.php?id=4709">IBM Evacuation Planner</a>.</p></li>
+</ul>
+
+<hr>
+
+<p><g-emoji alias="information_source" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2139.png">ℹ️</g-emoji> <g-emoji alias="heart" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2764.png">❤️</g-emoji> <img class="emoji" title=":octocat:" alt=":octocat:" src="https://assets-cdn.github.com/images/icons/emoji/octocat.png" height="20" width="20" align="absmiddle"></p>
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+      </footer>
+    </div>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
+  </body>
+</html>
