messed around with the look. added shoutouts
Signed-off-by: Mahathir Almashor <malmash@au1.ibm.com>

--- a/index.html
+++ b/index.html
@@ -32,34 +32,87 @@
         <ul></ul>
       </nav>
       <section>
-        <h3>
-<a id="details" class="anchor" href="#details" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Details</h3>
-
-<p>Research | Software Engineer<br>
-IBM Research Australia</p>
-
-<p><g-emoji alias="office" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f3e2.png">🏢</g-emoji> <a href="http://researcher.watson.ibm.com/researcher/view.php?person=au1-malmash">Work</a> |
-<g-emoji alias="floppy_disk" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4be.png">💾</g-emoji> <a href="https://github.com/ma-al">Code</a> |
-<g-emoji alias="mortar_board" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f393.png">🎓</g-emoji> <a href="http://orcid.org/0000-0002-3846-6282">Research</a></p>
 
 <h3>
-<a id="recent" class="anchor" href="#recent" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Recent</h3>
+   <a id="details" class="anchor" href="#details" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+   Details
+</h3>
 
-<ul>
-<li><p><strong>June 2016</strong> -  Participated in <a href="http://www.rhokaustralia.org/#what-is">Random Hacks of Kindness (RHoK)</a>, a hackathon for good causes. Helped <a href="http://changingplaces.org.au">Changing Places</a> develop a feedback tool for severely disabled people. Tweets of event:  <a href="https://twitter.com/rhokmelb/status/739343952512356352">@rhokmelb</a> and <a href="https://twitter.com/acd_eddie/status/739345009435017217">@acd_eddie</a>.</p></li>
-<li><p><strong>May 2016</strong> - Presented at <a href="http://anzdmc.com.au">ANZDMC 2016</a>, a conference for Disaster and Emergency Management. Talk was entitled "Mapping Wildfire Community Impact" and was about optimal sensor placement to detect wildfires. See <a href="https://twitter.com/DisasterForums/status/737156162810847232">tweet of event</a>.</p></li>
-<li><p><strong>Jan 2016</strong> - Journal article published in <a href="http://dx.doi.org/10.1016/j.simpat.2015.10.002">Simulation Modelling Practice and Theory (SimPAT)</a> entitled "Simulation of Wildfire Evacuation with Dynamic Factors and Model Composition". Based on work done for <a href="http://researcher.watson.ibm.com/researcher/view_group.php?id=4709">IBM Evacuation Planner</a>.</p></li>
-</ul>
+<p>
+   <b>Mahathir Almashor</b>
+   <br>
+   Research | Software Engineer
+   <br>
+   IBM Research - Australia
+</p>
 
-<hr>
 
-<p><g-emoji alias="information_source" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2139.png">ℹ️</g-emoji> <g-emoji alias="heart" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2764.png">❤️</g-emoji> <img class="emoji" title=":octocat:" alt=":octocat:" src="https://assets-cdn.github.com/images/icons/emoji/octocat.png" height="20" width="20" align="absmiddle"></p>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
-      </footer>
-    </div>
+
+<h3>
+   <a id="details" class="anchor" href="#links" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+   Links
+</h3>
+
+
+<a href="http://researcher.watson.ibm.com/researcher/view.php?person=au1-malmash">
+   Work @IBM</a>
+<br>
+
+<a href="https://github.com/ma-al">Code on Github</a><br>
+<a href="http://orcid.org/0000-0002-3846-6282">Publication Listing</a><br>
+
+<h3>
+   <a id="recent" class="anchor" href="#recent" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+   Recent
+</h3>
+
+<p>
+   <strong>June 2016</strong>
+   <br>
+   Participated in <a href="http://www.rhokaustralia.org/#what-is">Random Hacks of Kindness (RHoK)</a>, a hackathon for good causes. Helped <a href="http://changingplaces.org.au">Changing Places</a> develop an online feedback tool for severely disabled people. Tweets of event are at <a href="https://twitter.com/rhokmelb/status/739343952512356352">@rhokmelb</a> and <a href="https://twitter.com/acd_eddie/status/739345009435017217">@acd_eddie</a>. Read the <a href="https://www.linkedin.com/pulse/rhok-winter-hackathon-melbourne-personal-wrap-up-stefan-welack">short write-up</a> of the event by Stefan. Shout outs to
+   <a href="https://twitter.com/acd_eddie">Eddie</a>,
+   <a href="https://www.linkedin.com/in/dmaciasg">Daniel</a>,
+   <a href="https://www.linkedin.com/in/stefanwelack">Stefan</a>,
+   <a href="https://www.linkedin.com/in/ramji-piramanayagam-4b5b228">Ramji</a> and
+   <a href="https://angel.co/zinzi-sullivan">Zinzi</a>.
+</p>
+
+<p>
+   <strong>May 2016</strong>
+   <br>
+   Presented at <a href="http://anzdmc.com.au">ANZDMC 2016</a>, a conference for Disaster and Emergency Management held in the Gold Coast. My talk was entitled "Mapping Wildfire Community Impact" and was about the optimal placement of wild-fire sensors in order to detect wildfires. See <a href="https://twitter.com/DisasterForums/status/737156162810847232">tweet of event</a>. Shout outs to
+   <a href="http://www.davidbudden.com">David</a>,
+   <a href="https://www.linkedin.com/in/xu-peter-zhong-069aa684">Peter</a> and
+   <a href="https://github.com/pkge">Kent</a>.
+</p>
+
+<p>
+   <strong>Jan 2016</strong>
+   <br>
+   Journal article published in <a href="http://dx.doi.org/10.1016/j.simpat.2015.10.002">Simulation Modelling Practice and Theory (SimPAT)</a> entitled "Simulation of Wildfire Evacuation with Dynamic Factors and Model Composition". Based on work done for <a href="http://researcher.watson.ibm.com/researcher/view_group.php?id=4709">IBM Evacuation Planner</a>. Co-authors were
+   <a href="http://beloglazov.info">Anton</a>,
+   <a href="https://github.com/ermyas">Ermyas</a>,
+   <a href="https://www.linkedin.com/in/jan-richter-7556098">Jan</a> and
+   <a href="https://www.linkedin.com/in/kent-steer-8a247058">Kent</a>.
+</p>
+
+
+<br>
+<br>
+
+<p align="center">
+   <g-emoji alias="information_source" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2139.png">ℹ️</g-emoji> <g-emoji alias="heart" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2764.png">❤️</g-emoji> <img class="emoji" title=":octocat:" alt=":octocat:" src="https://assets-cdn.github.com/images/icons/emoji/octocat.png" height="20" width="20" align="absmiddle">
+</p>
+
+</section>
+<footer>
+   <p>
+      <small>Hosted on GitHub Pages &mdash; Base theme by <a href="https://twitter.com/michigangraham">mattgraham</a> &mdash; Minor modifications by me!
+      </small>
+   </p>
+</footer>
+</div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
+
+</body>
 </html>
