fixed language. added direct publications. moved links to buttons.
Signed-off-by: Mahathir Almashor <malmash@au1.ibm.com>

--- a/index.html
+++ b/index.html
@@ -18,14 +18,20 @@
 
       <header>
         <h1>Mahathir Almashor</h1>
-        <p>Life is short. Have fun working. ¯\_(ツ)_/¯</p>
+        <p>Life is short. Have fun working.</p>
       </header>
 
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="https://github.com/ma-al" class="button fork"><strong>View On GitHub</strong></a>
-      </div><!-- end banner -->
+        <a href="http://researcher.watson.ibm.com/researcher/view.php?person=au1-malmash" class="button fork"><strong>Work</strong></a>
+
+        <a href="https://github.com/ma-al" class="button fork"><strong>Code</strong></a>
+
+        <a href="http://orcid.org/0000-0002-3846-6282" class="button fork"><strong>Papers</strong></a>
+
+      </div>
+      <!-- end banner -->
 
     <div class="wrapper">
       <nav>
@@ -47,20 +53,6 @@
 </p>
 
 
-
-<h3>
-   <a id="details" class="anchor" href="#links" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
-   Links
-</h3>
-
-
-<a href="http://researcher.watson.ibm.com/researcher/view.php?person=au1-malmash">
-   Work @IBM</a>
-<br>
-
-<a href="https://github.com/ma-al">Code on Github</a><br>
-<a href="http://orcid.org/0000-0002-3846-6282">Publication Listing</a><br>
-
 <h3>
    <a id="recent" class="anchor" href="#recent" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
    Recent
@@ -69,7 +61,7 @@
 <p>
    <strong>June 2016</strong>
    <br>
-   Participated in <a href="http://www.rhokaustralia.org/#what-is">Random Hacks of Kindness (RHoK)</a>, a hackathon for good causes. Helped <a href="http://changingplaces.org.au">Changing Places</a> develop an online feedback tool for severely disabled people. Tweets of event are at <a href="https://twitter.com/rhokmelb/status/739343952512356352">@rhokmelb</a> and <a href="https://twitter.com/acd_eddie/status/739345009435017217">@acd_eddie</a>. Read the <a href="https://www.linkedin.com/pulse/rhok-winter-hackathon-melbourne-personal-wrap-up-stefan-welack">short write-up</a> of the event by Stefan. Shout outs to
+   Participated in <a href="http://www.rhokaustralia.org/#what-is">Random Hacks of Kindness (RHoK)</a>, a hackathon for good causes. Helped <a href="http://changingplaces.org.au">Changing Places</a> develop an online feedback tool for severely disabled people. Follow tweets of the event from <a href="https://twitter.com/rhokmelb/status/739343952512356352">@rhokmelb</a> and <a href="https://twitter.com/acd_eddie/status/739345009435017217">@acd_eddie</a>, and read the <a href="https://www.linkedin.com/pulse/rhok-winter-hackathon-melbourne-personal-wrap-up-stefan-welack">short write-up</a> by Stefan. Shout outs to
    <a href="https://twitter.com/acd_eddie">Eddie</a>,
    <a href="https://www.linkedin.com/in/dmaciasg">Daniel</a>,
    <a href="https://www.linkedin.com/in/stefanwelack">Stefan</a>,
@@ -80,8 +72,7 @@
 <p>
    <strong>May 2016</strong>
    <br>
-   Presented at <a href="http://anzdmc.com.au">ANZDMC 2016</a>, a conference for Disaster and Emergency Management held in the Gold Coast. My talk was entitled "Mapping Wildfire Community Impact" and was about the optimal placement of wild-fire sensors in order to detect wildfires. See <a href="https://twitter.com/DisasterForums/status/737156162810847232">tweet of event</a>. Shout outs to
-   <a href="http://www.davidbudden.com">David</a>,
+   Presented at <a href="http://anzdmc.com.au">ANZDMC 2016</a>, a disaster and emergency management conference. My talk was entitled "Mapping Wildfire Community Impact" and focused on the optimal placement of sensors in remote areas to detect wildfires. See <a href="https://twitter.com/DisasterForums/status/737156162810847232">tweet of event</a>. Based on a paper (currently under review) co-authored with <a href="http://www.davidbudden.com">David</a>,
    <a href="https://www.linkedin.com/in/xu-peter-zhong-069aa684">Peter</a> and
    <a href="https://github.com/pkge">Kent</a>.
 </p>
@@ -96,6 +87,87 @@
    <a href="https://www.linkedin.com/in/kent-steer-8a247058">Kent</a>.
 </p>
 
+
+
+<h3>
+   <a id="publications" class="anchor" href="#recent" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+   Publications
+</h3>
+
+<i style="color:#dbdbdb" >(in reverse chronological order)</i>
+<br>
+
+<p>
+<b>Simulation of Wildfire Evacuation with Dynamic Factors and Model Composition</b>
+A.Beloglazov, M.Almashor, E.Abebe, J.Richter and K.C.B.Steer
+DOI: 10.1016/j.simpat.2015.10.002
+Simulation Modelling Practice and Theory (SimPAT
+ISSN: 1569-190X
+</p>
+
+<p>
+<b>Enhancing Availability in Content Delivery Networks for Mobile Platforms</b>
+M.Almashor, I.Khalil, Z.Tari, A.Zomaya and S.Sahni
+DOI: 10.1109/TPDS.2013.2297927
+Transactions of Parallel and Distributed Systems (TPDS), IEEE
+ISSN: 1045-9219
+</p>
+
+<p>
+<b>Automatic and Autonomous Load Management in Peer-to-peer Virtual Environments</b>
+M.Almashor, I.Khalil, Z.Tari and A.Zomaya
+DOI: 10.1109/JSAC.2013.SUP.0513028
+Journal on Selected Areas in Communications (JSAC), IEEE
+ISSN: 0733-8716
+</p>
+
+<p>
+<b>Fully Peer-to-Peer Virtual Environments with 3D Voronoi Diagrams</b>
+M.Almashor and I.Khalil
+DOI: 10.1007/s00607-012-0197-9
+Computing, Springer
+ISSN: 1436-5057
+</p>
+
+<p>
+<b>Timely Arbitrator Selection in P2P Virtual Environments with 3D Voronoi Diagrams</b>
+M.Almashor and I.Khalil
+DOI: 10.1109/NCA.2011.40
+10th International Symposium on Network Computing and Applications (NCA)
+August 2011
+</p>
+
+<p>
+<b>Load-Balancing Properties of 3D Voronoi Diagrams in Peer-to-Peer Virtual Environments</b>
+M.Almashor and I.Khalil
+DOI: 10.1109/ICPADS.2010.97
+16th International Conference on Parallel and Distributed Systems (ICPADS)
+December 2010
+</p>
+
+<p>
+<b>Reducing Network Load in Large-Scale, Peer-to-peer Virtual Environments with 3D Voronoi Diagrams</b>
+M.Almashor and I.Khalil
+DOI: 10.1109/HIPC.2010.5713197
+17th International Conference on High Performance Computing (HiPC)
+December 2010
+</p>
+
+<p>
+<b>Dynamic Gameplay Arbitrators with 3D Voronoi Diagrams
+M.Almashor, I.Khalil and G.Leach</b>
+DOI: 10.1109/NCA.2010.46
+9th International Symposium on Network Computing and Applications (NCA)
+July 2010
+</p>
+
+<p>
+<b>Realtime physiological condition and location monitoring of street orienteering participants</b>
+I.Khalil, M.Almashor and F.Sufi
+DOI: 10.1109/ITAB.2009.5394360
+9th International Conference on Information Technology and Applications in Biomedicine (ITAB)
+November 2009
+</p>
 
 <br>
 <br>
