testing button shift on yellow banner
Signed-off-by: Mahathir Almashor <malmash@au1.ibm.com>

--- a/index.html
+++ b/index.html
@@ -13,25 +13,27 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  </head>
-  <body>
+</head>
+<body>
 
-      <header>
-        <h1>Mahathir Almashor</h1>
-        <p>Life is short. Have fun working.</p>
-      </header>
+<header>
+   <h1>Mahathir Almashor</h1>
+   <p>Life is short. Have fun working.</p>
+</header>
 
-      <div id="banner">
-        <span id="logo"></span>
+<div id="banner">
+   <span id="logo"></span>
 
-        <a href="http://researcher.watson.ibm.com/researcher/view.php?person=au1-malmash" class="button fork"><strong>Work</strong></a>
+   <div class="linkdiv">
+      <a href="http://researcher.watson.ibm.com/researcher/view.php?person=au1-malmash" class="button link"><strong>Work</strong></a>
 
-        <a href="https://github.com/ma-al" class="button fork"><strong>Code</strong></a>
+      <a href="https://github.com/ma-al" class="button link"><strong>Code</strong></a>
 
-        <a href="http://orcid.org/0000-0002-3846-6282" class="button fork"><strong>Papers</strong></a>
+      <a href="http://orcid.org/0000-0002-3846-6282" class="button link"><strong>Papers</strong></a>
+   </div>
 
-      </div>
-      <!-- end banner -->
+</div>
+<!-- end banner -->
 
     <div class="wrapper">
       <nav>
@@ -39,7 +41,7 @@
       </nav>
       <section>
 
-<h3>
+<h3 class="first">
    <a id="details" class="anchor" href="#details" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
    Details
 </h3>
