gg4it description
Signed-off-by: Mahathir Almashor <malmash@au1.ibm.com>

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
 </h3>
 
 <p>
+   <strong>August 2016</strong>
+   <br>
+   Manned the IBM booth at <a href="https://twitter.com/GoGirlGo4IT">Go Girl, Go For IT, 2016</a>, a tech showcase to encourage schoolgirls into STEM careers. Showed off <a href="http://nodered.org">Node-RED</a> and <a href="http://ibmresearchaustralia.tumblr.com/post/100472559189/computer-aided-melanoma-diagnosis">Image Analytics</a> using a <a href="http://www.parrot.com/usa/products/jumping-sumo/">jumping drone</a>, teaching smart girls about visual programming and machine vision. Shout outs to <a href="https://twitter.com/GoGirlGo4IT/status/765378010794958850">Hide</a>, <a href="https://www.linkedin.com/in/lynn-kwok-61b78b21">Lynn</a> and <a href="https://twitter.com/emendis1">Erandhi</a>.
+</p>
+
+<p>
    <strong>June 2016</strong>
    <br>
    Participated in <a href="http://www.rhokaustralia.org/#what-is">Random Hacks of Kindness (RHoK)</a>, a hackathon for good causes. Helped <a href="http://changingplaces.org.au">Changing Places</a> develop an online feedback tool for severely disabled people. Follow tweets of the event from <a href="https://twitter.com/rhokmelb/status/739343952512356352">@rhokmelb</a> and <a href="https://twitter.com/acd_eddie/status/739345009435017217">@acd_eddie</a>, and read the <a href="https://www.linkedin.com/pulse/rhok-winter-hackathon-melbourne-personal-wrap-up-stefan-welack">short write-up</a> by Stefan. Shout outs to
