--- a/index.html
+++ b/index.html
@@ -61,28 +61,41 @@
 </h3>
 
 <p>
+   <strong>September 2016</strong>
+   <br>
+   Presented "A Bush Fire Evacuation Planning Service  Utilising Multiple Simulation Systems" at the <a href="http://www.simulationcongress.com">Australasian Simulation Congress</a>. Demonstrated IBM's <a href ="http://ibmresearchaustralia.tumblr.com/post/94987302109/fire-evacuation-planner">Evacuation Planner</a> and the use of <a href="https://www.docker.com">docker</a> to enable Emergency Management research. <g-emoji alias="wave" fallback-src="https://assets-cdn.github.com/images/icons/emoji/wave.png">👋</g-emoji><g-emoji alias="heart" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2764.png">❤️</g-emoji> to <a href="http://beloglazov.info">Anton</a>,
+   <a href="https://github.com/ermyas">Ermyas</a>,
+   <a href="https://www.linkedin.com/in/jan-richter-7556098">Jan</a>,
+   <a href="https://www.linkedin.com/in/kent-steer-8a247058">Kent</a>,
+   <a href="http://www.davidbudden.com">David</a>,
+   <a href="https://www.linkedin.com/in/xu-peter-zhong-069aa684">Peter</a>.
+
+
+</p>
+
+<p>
    <strong>August 2016</strong>
    <br>
-   Manned the IBM booth at <a href="https://twitter.com/GoGirlGo4IT">Go Girl, Go For IT, 2016</a>, a tech showcase to encourage schoolgirls into STEM careers. Showed off <a href="http://nodered.org">Node-RED</a> and <a href="http://ibmresearchaustralia.tumblr.com/post/100472559189/computer-aided-melanoma-diagnosis">Image Analytics</a> using a <a href="http://www.parrot.com/usa/products/jumping-sumo/">jumping drone</a>, teaching smart girls about visual programming and machine vision. Shout outs to <a href="https://twitter.com/GoGirlGo4IT/status/765378010794958850">Hide</a>, <a href="https://www.linkedin.com/in/lynn-kwok-61b78b21">Lynn</a> and <a href="https://twitter.com/emendis1">Erandhi</a>.
+   Manned the IBM booth at <a href="https://twitter.com/GoGirlGo4IT">Go Girl, Go For IT, 2016</a>, a tech showcase to encourage schoolgirls into STEM careers. Showed off <a href="http://nodered.org">Node-RED</a> and <a href="http://ibmresearchaustralia.tumblr.com/post/100472559189/computer-aided-melanoma-diagnosis">Image Analytics</a> using a <a href="http://www.parrot.com/usa/products/jumping-sumo/">jumping drone</a>, teaching smart girls about visual programming and machine vision. Thanks to <a href="https://twitter.com/GoGirlGo4IT/status/765378010794958850">Hide</a>, <a href="https://www.linkedin.com/in/lynn-kwok-61b78b21">Lynn</a> and <a href="https://twitter.com/emendis1">Erandhi</a>.
 </p>
 
 <p>
    <strong>June 2016</strong>
    <br>
-   Participated in <a href="http://www.rhokaustralia.org/#what-is">Random Hacks of Kindness (RHoK)</a>, a hackathon for good causes. Helped <a href="http://changingplaces.org.au">Changing Places</a> develop an online feedback tool for severely disabled people. Follow tweets of the event from <a href="https://twitter.com/rhokmelb/status/739343952512356352">@rhokmelb</a> and <a href="https://twitter.com/acd_eddie/status/739345009435017217">@acd_eddie</a>, and read the <a href="https://www.linkedin.com/pulse/rhok-winter-hackathon-melbourne-personal-wrap-up-stefan-welack">short write-up</a> by Stefan. Shout outs to
+   Participated in <a href="http://www.rhokaustralia.org/#what-is">Random Hacks of Kindness (RHoK)</a>. Part of winning team that helped <a href="http://changingplaces.org.au">Changing Places</a> develop an online feedback tool for severely disabled people. See event tweets from <a href="https://twitter.com/rhokmelb/status/739343952512356352">@rhokmelb</a>, <a href="https://twitter.com/acd_eddie/status/739345009435017217">@acd_eddie</a> and <a href="https://www.linkedin.com/pulse/rhok-winter-hackathon-melbourne-personal-wrap-up-stefan-welack">Stefan's write-up</a>. <g-emoji alias="metal" fallback-src="https://assets-cdn.github.com/images/icons/emoji/metal.png">🤘🏼</g-emoji>
    <a href="https://twitter.com/acd_eddie">Eddie</a>,
    <a href="https://www.linkedin.com/in/dmaciasg">Daniel</a>,
    <a href="https://www.linkedin.com/in/stefanwelack">Stefan</a>,
-   <a href="https://www.linkedin.com/in/ramji-piramanayagam-4b5b228">Ramji</a> and
-   <a href="https://angel.co/zinzi-sullivan">Zinzi</a>.
+   <a href="https://www.linkedin.com/in/ramji-piramanayagam-4b5b228">Ramji</a>,
+   <a href="https://angel.co/zinzi-sullivan">Zinzi</a> <g-emoji alias="metal" fallback-src="https://assets-cdn.github.com/images/icons/emoji/metal.png">🤘🏼</g-emoji>
 </p>
 
 <p>
    <strong>May 2016</strong>
    <br>
-   Presented at <a href="http://anzdmc.com.au">ANZDMC 2016</a>, a disaster and emergency management conference. My talk was entitled "Mapping Wildfire Community Impact" and focused on the optimal placement of sensors in remote areas to detect wildfires. See <a href="https://twitter.com/DisasterForums/status/737156162810847232">tweet of event</a>. Based on a paper (currently under review) co-authored with <a href="http://www.davidbudden.com">David</a>,
+   Presented "Mapping Wildfire Community Impact" at an emergency management conference, <a href="http://anzdmc.com.au">ANZDMC</a>. Talk was about the placement of wild-fire sensors in remote areas, based on an upcoming paper co-authored with <a href="http://www.davidbudden.com">David</a>,
    <a href="https://www.linkedin.com/in/xu-peter-zhong-069aa684">Peter</a> and
-   <a href="https://github.com/pkge">Kent</a>.
+   <a href="https://github.com/pkge">Kent</a>. See tweet of event <a href="https://twitter.com/DisasterForums/status/737156162810847232">here</a>.
 </p>
 
 <p>
