--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
 </h3>
 
 <p>
+
+   <strong>October 2016</strong>
+   <br>
+   Attended an Angular crash-course. <a href="https://twitter.com/SSW_TV/status/784639225434107904">Almost glorious</a>, if not for my arch-nemesis, <a href="https://www.linkedin.com/in/dmaciasg">Daniel</a>. Awesome assistance by the amazing <a href="https://www.ssw.com.au/ssw/default.aspx">SSW team</a>, lead by <a href="https://github.com/duncanhunter">Duncan</a>. Allo also to <a href="https://mobilevoting.com.au/team/phillip-zada/">Phillip</a> for his advice. <g-emoji alias="wave" fallback-src="https://assets-cdn.github.com/images/icons/emoji/smile.png">😄</g-emoji>
+</p>
+
+<p>
    <strong>September 2016</strong>
    <br>
    Presented "A Bush Fire Evacuation Planning Service  Utilising Multiple Simulation Systems" at the <a href="http://www.simulationcongress.com">Australasian Simulation Congress</a>. Demonstrated IBM's <a href ="http://ibmresearchaustralia.tumblr.com/post/94987302109/fire-evacuation-planner">Evacuation Planner</a> and the use of <a href="https://www.docker.com">docker</a> to enable Emergency Management research. <g-emoji alias="wave" fallback-src="https://assets-cdn.github.com/images/icons/emoji/wave.png">👋</g-emoji><g-emoji alias="heart" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2764.png">❤️</g-emoji> to <a href="http://beloglazov.info">Anton</a>,
@@ -69,8 +76,6 @@
    <a href="https://www.linkedin.com/in/kent-steer-8a247058">Kent</a>,
    <a href="http://www.davidbudden.com">David</a>,
    <a href="https://www.linkedin.com/in/xu-peter-zhong-069aa684">Peter</a>.
-
-
 </p>
 
 <p>
