fixed no display of banner links in iphone
Signed-off-by: Mahathir Almashor <malmash@au1.ibm.com>

--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
 </div>
 <!-- end banner -->
 
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
+<div class="wrapper">
+   <!-- <nav>
+      <ul></ul>
+   </nav> -->
+
+<section>
 
 <h3 class="first">
    <a id="details" class="anchor" href="#details" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
@@ -174,6 +175,7 @@ M.Almashor, I.Khalil and G.Leach | DOI: 10.1109/NCA.2010.46 | 9th International 
       </small>
    </p>
 </footer>
+
 </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 
