clean up and testing disclaimer
Signed-off-by: Mahathir Almashor <malmash@au1.ibm.com>

--- a/index.html
+++ b/index.html
@@ -36,9 +36,6 @@
 <!-- end banner -->
 
 <div class="wrapper">
-   <!-- <nav>
-      <ul></ul>
-   </nav> -->
 
 <section>
 
@@ -172,6 +169,8 @@ M.Almashor, I.Khalil and G.Leach | DOI: 10.1109/NCA.2010.46 | 9th International 
 <footer>
    <p>
       <small>Hosted on GitHub Pages &mdash; Base theme by <a href="https://twitter.com/michigangraham">mattgraham</a> &mdash; Minor modifications by me!
+      <br><br>
+      Only tested against iOS and Safari browsers. ¯\_(ツ)_/¯
       </small>
    </p>
 </footer>
