nemesis to amigo
Signed-off-by: Mahathir Almashor <malmash@au1.ibm.com>

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
    <strong>October 2016</strong>
    <br>
-   Attended an Angular crash-course. <a href="https://twitter.com/SSW_TV/status/784639225434107904">Almost glorious</a>, if not for my arch-nemesis, <a href="https://www.linkedin.com/in/dmaciasg">Daniel</a>. Awesome assistance by the amazing <a href="https://www.ssw.com.au/ssw/default.aspx">SSW team</a>, lead by <a href="https://github.com/duncanhunter">Duncan</a>. Allo also to <a href="https://mobilevoting.com.au/team/phillip-zada/">Phillip</a> for his advice. <g-emoji alias="wave" fallback-src="https://assets-cdn.github.com/images/icons/emoji/smile.png">😄</g-emoji>
+   Attended an Angular crash-course. <a href="https://twitter.com/SSW_TV/status/784639225434107904">Almost glorious</a>, if not for my arch-amigo, <a href="https://www.linkedin.com/in/dmaciasg">Daniel</a>. Awesome assistance by the amazing <a href="https://www.ssw.com.au/ssw/default.aspx">SSW team</a>, lead by <a href="https://github.com/duncanhunter">Duncan</a>. Allo also to <a href="https://mobilevoting.com.au/team/phillip-zada/">Phillip</a> for his advice. <g-emoji alias="wave" fallback-src="https://assets-cdn.github.com/images/icons/emoji/smile.png">😄</g-emoji>
 </p>
 
 <p>
