testing LFS gitattributes
Signed-off-by: Mahathir Almashor <malmash@au1.ibm.com>

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <p>
    <b>Mahathir Almashor</b>
    <br>
-   Research | Software Engineer
+   Software Engineer
    <br>
    IBM Research - Australia
 </p>
