moaaar tweets! moar space
Signed-off-by: Mahathir Almashor <malmash@au1.ibm.com>

--- a/index.html
+++ b/index.html
@@ -59,11 +59,16 @@
 </h3>
 
 <p>
-
    <strong>October 2016</strong>
    <br>
    Attended an Angular crash-course. <a href="https://twitter.com/SSW_TV/status/784639225434107904">Almost glorious</a>, if not for my arch-amigo, <a href="https://www.linkedin.com/in/dmaciasg">Daniel</a>. Awesome assistance by the amazing <a href="https://www.ssw.com.au/ssw/default.aspx">SSW team</a>, lead by <a href="https://github.com/duncanhunter">Duncan</a>. Allo also to <a href="https://mobilevoting.com.au/team/phillip-zada/">Phillip</a> for his advice. <g-emoji alias="wave" fallback-src="https://assets-cdn.github.com/images/icons/emoji/smile.png">😄</g-emoji>
+
+   <div class="tweetshow">
+
    <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">The Melbourne hack day cup winners have been decided - and it&#39;s a tie!<br><br>Well done to Daniel Macias and Mahathir Almashor! <a href="https://t.co/k5dga8yBjt">pic.twitter.com/k5dga8yBjt</a></p>&mdash; SSW / SSW TV (@SSW_TV) <a href="https://twitter.com/SSW_TV/status/784639225434107904">October 8, 2016</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+   </div>
+   <br>
+
 </p>
 
 <p>
@@ -94,6 +99,7 @@
    <a href="https://angel.co/zinzi-sullivan">Zinzi</a> <g-emoji alias="metal" fallback-src="https://assets-cdn.github.com/images/icons/emoji/metal.png">🤘🏼</g-emoji>
 
    <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Our winning <a href="https://twitter.com/ChangingPlaceAU">@ChangingPlaceAU</a> <a href="https://twitter.com/rhokmelb">@rhokmelb</a> team, including <a href="https://twitter.com/zinzibianca">@zinzibianca</a> great job guys! We&#39;re chuffed as... <a href="https://t.co/lLxmQN9dgU">pic.twitter.com/lLxmQN9dgU</a></p>&mdash; Eddie Chapman (@acd_eddie) <a href="https://twitter.com/acd_eddie/status/739345009435017217">June 5, 2016</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+   <br>
 </p>
 
 <p>
@@ -102,6 +108,9 @@
    Presented "Mapping Wildfire Community Impact" at an emergency management conference, <a href="http://anzdmc.com.au">ANZDMC</a>. Talk was about the placement of wild-fire sensors in remote areas, based on an upcoming paper co-authored with <a href="http://www.davidbudden.com">David</a>,
    <a href="https://www.linkedin.com/in/xu-peter-zhong-069aa684">Peter</a> and
    <a href="https://github.com/pkge">Kent</a>. See tweet of event <a href="https://twitter.com/DisasterForums/status/737156162810847232">here</a>.
+
+   <blockquote class="twitter-tweet" data-lang="en"><p lang="und" dir="ltr"><a href="https://t.co/QCmWnU2422">pic.twitter.com/QCmWnU2422</a></p>&mdash; Disaster Management (@DisasterForums) <a href="https://twitter.com/DisasterForums/status/737156162810847232">May 30, 2016</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+   <br>
 </p>
 
 <p>
