--- a/index.html
+++ b/index.html
@@ -59,14 +59,26 @@
 </h3>
 
 <p>
+   <strong>November - December 2016</strong>
+   <br>
+   Kids ❤️ code. Parents, send your children to your nearest <a href="https://coderdojo.com">CoderDojo</a>, where we teach them to <a href="http://structure.usc.edu/numarray/node26.html">slice a Python array</a> like a real ninja. Haaai YAAAH! For volunteer-ninjas near Carlton, get your shurikens from <a href="https://au.linkedin.com/in/alicja-%25C4%2587wierz-a0427666">Alicja</a>, our robo-ninjutsu master.
+</p>
+
+<p>
+   <strong>November 2016</strong>
+   <br>
+   <a href="https://twitter.com/SSW_TV/status/784639225434107904">RHoK</a>ing again! Helped <a href="https://github.com/RHoKAustralia/sugihara">Sugihara</a> develop a crowd-sourced data verification tool for disaster responders. Awesome team 💪 made up of <a href="https://au.linkedin.com/in/nick-williams-7a941168">Nick</a>, <a href="https://www.linkedin.com/in/tafida/">Fida</a>, Kristin, Mike, Sasha, <a href="https://github.com/MarkoDiUS">Marko</a>, <a href="https://www.linkedin.com/in/aryaman-pandav">Aryaman</a>. Thanks to <a href="http://dius.com.au">DiUS</a> for the AWS instance. Tinder for disasters! 😝
+   <br>
+   <img class="embed-img" src="https://github.com/RHoKAustralia/sugihara/raw/master/public/sugihara-team-rhok-nov.jpg">
+
+</p>
+
+<p>
    <strong>October 2016</strong>
    <br>
    Attended an Angular crash-course. <a href="https://twitter.com/SSW_TV/status/784639225434107904">Almost glorious</a>, if not for my arch-amigo, <a href="https://www.linkedin.com/in/dmaciasg">Daniel</a>. Awesome assistance by the amazing <a href="https://www.ssw.com.au/ssw/default.aspx">SSW team</a>, lead by <a href="https://github.com/duncanhunter">Duncan</a>. Allo also to <a href="https://mobilevoting.com.au/team/phillip-zada/">Phillip</a> for his advice. <g-emoji alias="wave" fallback-src="https://assets-cdn.github.com/images/icons/emoji/smile.png">😄</g-emoji>
 
-   <div class="tweetshow">
-
    <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">The Melbourne hack day cup winners have been decided - and it&#39;s a tie!<br><br>Well done to Daniel Macias and Mahathir Almashor! <a href="https://t.co/k5dga8yBjt">pic.twitter.com/k5dga8yBjt</a></p>&mdash; SSW / SSW TV (@SSW_TV) <a href="https://twitter.com/SSW_TV/status/784639225434107904">October 8, 2016</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-   </div>
    <br>
 
 </p>
