changing work location
Signed-off-by: Mardi <mango.alien@icloud.com>

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    <span id="logo"></span>
 
    <div class="linkdiv">
-      <a href="http://researcher.watson.ibm.com/researcher/view.php?person=au1-malmash" class="button link"><strong>Work</strong></a>
+      <a href="https://seeingmachines.com" class="button link"><strong>Work</strong></a>
 
       <a href="https://github.com/ma-al" class="button link"><strong>Code</strong></a>
 
