updated work deeets
Signed-off-by: Mardi <mango.alien@icloud.com>

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 
    <div class="linkdiv">
       <a href="https://seeingmachines.com" class="button link"><strong>Work</strong></a>
-
       <a href="https://github.com/ma-al" class="button link"><strong>Code</strong></a>
-
       <a href="http://orcid.org/0000-0002-3846-6282" class="button link"><strong>Papers</strong></a>
    </div>
 
@@ -47,9 +45,9 @@
 <p>
    <b>Mahathir Almashor</b>
    <br>
-   Software Engineer
+   Senior Software Engineer
    <br>
-   IBM Research - Australia
+   Seeing Machines, Canberra, Australia
 </p>
 
 
