added bushfire paper and machinations
Signed-off-by: Mardi <mango.alien@icloud.com>

--- a/index.html
+++ b/index.html
@@ -57,9 +57,24 @@
 </h3>
 
 <p>
-   <strong>Back To The Future</strong>
-   <br>
-   Woops. Haven't been updating this. Brace for an incoming barage of posts 😝
+  <strong>December 2017</strong>
+  <br>
+  Article published from the work done way back while I was at IBM Research. About the use of <a href="https://doi.org/10.1016/j.firesaf.2017.09.001">shelters during bush-fire evacuations</a>. Kudos to <a href="https://au.linkedin.com/in/xu-peter-zhong-069aa684">Peter Zhong</a>, whose perseverance pushed this over the line 👍🏼. Other authors were 
+  <a href="https://www.linkedin.com/in/kent-steer-8a247058">Kent</a>,
+  <a href="https://github.com/ermyas">Ermyas</a> and
+  <a href="http://beloglazov.info">Anton</a>.
+</p>
+
+<p>
+  <strong>May 2017</strong>
+  <br>
+  Moved from International Business Machines to Seeing Machines 🤖 Still waking up to <a href="https://youtu.be/aTL4qIIxg8A?t=51">Rage Against The Machine</a> 🎸
+</p>
+
+<p>
+  <strong>Back To The Future</strong>
+  <br>
+  Woops. Haven't been updating this. Brace for an incoming barage of posts 😝
 </p>
 
 <p>
@@ -130,7 +145,7 @@
 </p>
 
 <p>
-   <strong>Jan 2016</strong>
+   <strong>January 2016</strong>
    <br>
    Journal article published in <a href="http://dx.doi.org/10.1016/j.simpat.2015.10.002">Simulation Modelling Practice and Theory (SimPAT)</a> entitled "Simulation of Wildfire Evacuation with Dynamic Factors and Model Composition". Based on work done for <a href="http://researcher.watson.ibm.com/researcher/view_group.php?id=4709">IBM Evacuation Planner</a>. Co-authors were
    <a href="http://beloglazov.info">Anton</a>,
@@ -148,6 +163,10 @@
 
 <i style="color:#dbdbdb" >(in reverse chronological order)</i>
 <br>
+
+<p>
+<b>On the Utility of Shelters in Wildfire Evacuations</b> | K.Steer, E.Abebe, M.Almashor, A.Beloglazov X.Zhong | DOI: 10.1016/j.firesaf.2017.09.001 | Fire Safety Journal | ISSN: 0379-7112
+</p>
 
 <p>
 <b>Simulation of Wildfire Evacuation with Dynamic Factors and Model Composition</b> | A.Beloglazov, M.Almashor, E.Abebe, J.Richter and K.C.B.Steer | DOI: 10.1016/j.simpat.2015.10.002 | Simulation Modelling Practice and Theory (SimPAT) | ISSN: 1569-190X
