update work link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    <span id="logo"></span>
 
    <div class="linkdiv">
-      <a href="https://seeingmachines.com" class="button link"><strong>Work</strong></a>
+      <a href="https://www.seeingmachines.com/industry-applications/aviation/" class="button link"><strong>Work</strong></a>
       <a href="https://github.com/ma-al" class="button link"><strong>Code</strong></a>
       <a href="http://orcid.org/0000-0002-3846-6282" class="button link"><strong>Papers</strong></a>
    </div>
