--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    <div class="linkdiv">
       <a href="https://www.seeingmachines.com/industry-applications/aviation/" class="button link"><strong>Work</strong></a>
       <a href="https://github.com/ma-al" class="button link"><strong>Code</strong></a>
-      <a href="http://orcid.org/0000-0002-3846-6282" class="button link"><strong>Papers</strong></a>
+      <a href="https://orcid.org/0000-0002-3846-6282" class="button link"><strong>Papers</strong></a>
    </div>
 
 </div>
