added project hihar
Signed-off-by: Mardi <mango.alien@icloud.com>

--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@
 </p>
 
 <p>
+  <strong>July 2017</strong>
+  <br>
+  Honey, I hit a roo! Govhack 2017 project to analyse the impact of accidents involving wildlife (a common occurrence around Canberra). Built a web and mobile app to aid motorists easily report impacts to authorities and wildlife rescue teams. So much fun doing this with 
+  <a href="https://twitter.com/ANTSstats">Anthony</a>,
+  <a href="http://www.davidgregory.com.au">David</a>,
+  <a href="http://www.iandudley.com">Ian</a> and 
+  <a href="https://www.linkedin.com/in/yogesh-mulye-2241572a/">Yogesh</a>. 🦘
+  <img class="embed-img" src="https://github.com/ma-al/hihar/raw/master/media/team-photo.jpg">
+</p>
+
+<p>
   <strong>May 2017</strong>
   <br>
   Moved from International Business Machines to Seeing Machines 🤖 Still waking up to <a href="https://youtu.be/aTL4qIIxg8A?t=51">Rage Against The Machine</a> 🎸
