added age-friendly canberra
Signed-off-by: Mardi <mango.alien@icloud.com>

--- a/index.html
+++ b/index.html
@@ -57,6 +57,22 @@
 </h3>
 
 <p>
+  <strong>September 2018</strong>
+  <br>
+  Spent 2 days helping old ladies cross their streets 👵🏼. Not really but  <a href=
+  "https://hackerspace.govhack.org/projects/age_friendly_canberra_77">Age-Friendly Canberra</a> is a city planning tool that makes life easier for our aged population. We used federal and state data on a mapping tool, so planners know where there was a lack of infrastructure (e.g., clinics, wheelchair ramps) and plan accordingly. Shout out to my fantastic team-mates 
+  <a href="https://www.linkedin.com/in/nicole-sabel-176a35129">Niki</a>,
+  <a href="https://www.linkedin.com/in/ashleigh-blechynden-b0b718110">Ashleigh</a>,
+  <a href="https://www.linkedin.com/in/elizabeth-manners-440a20a1">Lizzie</a>,
+  Aman,
+  Vivian,
+  <a href="https://www.linkedin.com/in/anderson-cheung-0b766956">Anderson</a>,
+  Nathan and
+  <a href="https://www.linkedin.com/in/tauraa-exham-355733143">Tauraa</a>. 
+  <img class="embed-img" src="https://github.com/ma-al/gh18-p77/raw/master/pix/funny-under-tree.jpg">
+</p>
+
+<p>
   <strong>December 2017</strong>
   <br>
   Article published from the work done way back while I was at IBM Research. About the use of <a href="https://doi.org/10.1016/j.firesaf.2017.09.001">shelters during bush-fire evacuations</a>. Kudos to <a href="https://au.linkedin.com/in/xu-peter-zhong-069aa684">Peter Zhong</a>, whose perseverance pushed this over the line 👍🏼. Other authors were 
