added move to CSIRO

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    <span id="logo"></span>
 
    <div class="linkdiv">
-      <a href="https://www.seeingmachines.com/industry-applications/aviation/" class="button link"><strong>Work</strong></a>
+      <a href="https://research.csiro.au/distributed-systems-security/people/staff/" class="button link"><strong>Work</strong></a>
       <a href="https://github.com/ma-al" class="button link"><strong>Code</strong></a>
       <a href="https://orcid.org/0000-0002-3846-6282" class="button link"><strong>Papers</strong></a>
    </div>
@@ -45,9 +45,11 @@
 <p>
    <b>Mahathir Almashor</b>
    <br>
-   Senior Software Engineer
+   Senior Research Scientist
    <br>
-   Seeing Machines, Canberra, Australia
+   CSIRO/Data61, Marsfield, Sydney
+   <br>
+   Cyber Security CRC
 </p>
 
 
@@ -55,6 +57,16 @@
    <a id="recent" class="anchor" href="#recent" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
    Recent
 </h3>
+
+<p>
+  <strong>November 2019</strong>
+  <br>
+  Ai yai yai... I'm really bad at updating this.
+  <br>
+  Moved from Seeing Machines to CSIRO/Data61 (Commonwealth Science and Industrial Research Organisation). Working on an anti-phishing project for state govenrment agencies and <a href="https://www.cybersecuritycrc.org.au">Cyber Security CRC</a>.
+  <br>
+  I also need to look at Jekyll. Dealing with too much HTML here 🤪
+</p>
 
 <p>
   <strong>September 2018</strong>
