fix them new lines

--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
 <p>
   <strong>November 2019</strong>
   <br>
-  Ai yai yai... I'm really bad at updating this.
-  <br>
-  Moved from Seeing Machines to CSIRO/Data61 (Commonwealth Science and Industrial Research Organisation). Working on an anti-phishing project for state govenrment agencies and <a href="https://www.cybersecuritycrc.org.au">Cyber Security CRC</a>.
-  <br>
+  Ai yai yai... I'm really bad at updating this. Moved from Seeing Machines to CSIRO/Data61 (Commonwealth Science and Industrial Research Organisation). Working on an anti-phishing project for state govenrment agencies and <a href="https://www.cybersecuritycrc.org.au">Cyber Security CRC</a>.
   I also need to look at Jekyll. Dealing with too much HTML here 🤪
 </p>
 
